// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TWAMM #claimEarnings gas 1`] = `
Object {
  "calldataByteLength": 100,
  "gasUsed": 34149,
}
`;

exports[`TWAMM #executeTWAMMOrders gas 1`] = `
Object {
  "calldataByteLength": 68,
  "gasUsed": 377073,
}
`;

exports[`TWAMM #modifyLongTermOrder gas 1`] = `
Object {
  "calldataByteLength": 132,
  "gasUsed": 39100,
}
`;

exports[`TWAMM #submitLongTermOrder gas 1`] = `
Object {
  "calldataByteLength": 132,
  "gasUsed": 121220,
}
`;

exports[`TWAMM single pool sell tests gas 1`] = `
Object {
  "calldataByteLength": 68,
  "gasUsed": 105346,
}
`;

exports[`TWAMM single pool sell tests gas zeroForOne=false 1`] = `
Object {
  "calldataByteLength": 68,
  "gasUsed": 113069,
}
`;
